--- a/style 4/index.html
+++ b/style 4/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>MENU</title>
+</head>
+<body>
+    <head>
     <meta charset="utf-8">
     <title>module2-solution</title>
 </head>
@@ -33,4 +39,5 @@
         </div>
 </body>
 
+</body>
 </html>
