--- a/style 4/index.html
+++ b/style 4/index.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>MENU</title>
-</head>
-<body>
-    <head>
     <meta charset="utf-8">
     <title>module2-solution</title>
 </head>
@@ -39,5 +33,4 @@
         </div>
 </body>
 
-</body>
 </html>
