--- a/style/index.html
+++ b/style/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>module2-solution</title>
 </head>
-<link rel="stylesheet" type="text/css" href="C:\Users\HKC\OneDrive\Documents\GitHub\SoundaryaDube.github.io\style">
+<link rel="stylesheet" type="text/css" href="C:\Users\HKC\OneDrive\Documents\GitHub\SoundaryaDube.github.io\style 4">
 
 <body>
     <h1>Our Menu</h1>
